--- a/requirements.txt
+++ b/requirements.txt
@@ -126,7 +126,7 @@ pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 pyviz-comms==2.1.0
 PyWavelets==1.1.1
-pywin32==301
+pywin32
 pywinpty
 PyYAML==6.0
 pyzmq
