--- a/requirements.txt
+++ b/requirements.txt
@@ -88,7 +88,7 @@ notebook
 numba==0.53.1
 numexpr==2.7.3
 numpy==1.19.5
-openpyxl==3.0.9
+openpyxl
 packaging==21.2
 pandas==1.3.4
 pandas-profiling==3.1.0
